--- a/views/user/product.ejs
+++ b/views/user/product.ejs
@@ -6,7 +6,9 @@
 <body class="bg-[#F2F2F2] flex flex-col h-screen  ">
     <%-include('../partials/user/headerPhone.ejs')%>
     <%-include('../partials/user/HeaderDesktopUser.ejs')%>
-    <div class=""><!--container-->
+    <div class="searchResult-Container">
+    </div>
+    <main class=""><!--container-->
         <div class="px-3 bg-white m-2  rounded-md pb-6 lg:flex   ">
             <div class="lg:w-1/2 w-full px-6"><!--Desktop flex firs part-->
                 <div class="flex justify-center py-5 border-b-gray-500 border-b-[.1px] lg:border-0 w-full lg:min-w-1/2
@@ -108,7 +110,7 @@
             </div>
         </div>
     
-    </div>
+    </main>
     <div class="hidden lg:block">  
         <%-include("../partials/user/userFooter.ejs")%>
     </div>
