--- a/views/partials/user/searchResult.ejs
+++ b/views/partials/user/searchResult.ejs
@@ -1,6 +1,6 @@
-<div class="lg:flex lg:justify-around " id="searchResultContainer">
+<div class="lg:flex lg:justify-around flex-grow" id="searchResultContainer">
     <div class=" lg:mt-12"><!--Filtering-->
-        <form class="drop-shadow-sm rounded-md pb-14 space-y-10 pr-28 pl-4 bg-white hidden lg:block">
+        <form id="searchForm" class="drop-shadow-sm rounded-md pb-14 space-y-10 pr-28 pl-4 bg-white hidden lg:block  <%  if(searchResults.length===0){ %>lg:hidden<% } %>">
             <div class=" mb-2 pt-2"><!--Condition-->
                 <div class="text-sm font-medium py-2">
                     CONDITION
@@ -77,30 +77,12 @@
             
         </form>
     </div>
-    <div> <!--Novel conatiner-->
-        <div class="grid-cols-2 lg:grid-cols-6 lg:gap-x-8 gap-x-3 sm:grid-cols-4 mt-3 w-full grid px-5 gap-y-4 lg:mt-12"> <!--Books group container-->
-            <!--item-->
-            <!--item2-->
-            <!--item3-->
-            <% searchResults.forEach(function(data){ %>
-                <div class="bg-white md:min-w-[135px] md:max-w-[135px]  min-w-[150px] max-w-[150px] min-h-[180px]  rounded-md drop-shadow-sm  pt-2 pb-1 relative lg:min-h-[200px] lg:min-w-[160px] w-3  "> 
-                    <div class="flex items-center justify-center"> 
-                        <img class="rounded-t-md w-[160px] md:w-[135px] h-[120px] md:h-[100px] object-contain pb-2 border-b lg:min-h-[120px] lg:min-w-[150px]" src="<%= data.imageUrl %>" alt="">
-                    </div>
-                    <div class="flex flex-col items-center ">
-                        <p class="mt-2 text-[#4B727A] font-semibold text-[13px] max-w-[130px] lg:max-w-[140px] truncate lg:text-sm"><%= data.bookName %></p>
-                        <p class="text-[#5E8E99] font-normal text-[11px] max-w-[120px] lg:max-w-[130px] truncate lg:text-xs"><%= data.author %> </p>
-                        <div class="mt-[-5px] lg:mt-[1px]">
-                            <span class="text-xs py-1 font-bold text-[#008000] lg:text-sm"><%= data.discount %>% off</span> <span class="text-xs text-[#666666] line-through lg:text-sm"><%= data.MRP %></span> <span class="text-xs font-bold lg:text-sm"><%= data.salePrice %></span></div>
-                    </div>
-                    <div class="w-full px-3 my-2">
-                        <button class="flex justify-center bg-[#DAA520] items-center px-2 py-[2px] rounded-lg text-white space-x-[2px] w-full lg:px-2 lg:py-1">
-                            <p class="text-xs lg:text-sm font-medium ">Add to cart</p>
-                            <img class="h-3 lg:h-4" src="/images/shopping-cart white.png" alt="">
-                        </button>
-                    </div>
-                </div>
-            <% })%>
-        </div>
+    <div>
+        <%-include("../user/searchResultInnerData.ejs")%>
     </div>
-</div>
+   <script>
+
+    alert('hi')
+
+   </script>
+    <script src="../../../javascripts/user/searchFilter.js"></script>
