--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -1,12 +1,88 @@
 <%-include("../partials/user/head.ejs")%>
 <link rel="stylesheet" href="/css/user/home.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-<body class="bg-[#F2F2F2]">
-    <%-include('../partials/user/headerPhone.ejs')%>
-    <%-include('../partials/user/HeaderDesktopUser.ejs')%>
-    <div id="searchResult-Container">
+<body class="bg-[#F2F2F2]  flex flex-col h-screen">
+    <header class="bg-[#5E8E99] md:px-10 px-2 py-2 lg:py-0 ">
+        <div class="flex justify-between lg:justify-around  items-center"> <!--Top logo sign in cart-->
+            <div class="flex items-center space-x-3 lg:space-x-1 xl:space-x-5 md:space-x-5"> <!--left-->
+                    <a id="menuButton" onclick="openNav();return false;" href="" class="flex items-center"><!--menu-->
+                        <img class="h-[18px] md:h-6 lg:hidden" src="/images/menuWhite.png" alt="">
+                    </a> 
+                <a href="" class="flex items-center"><!--Logo-->
+                    <img class="h-7 md:h-8 lg:h-10" src="/images/Logo.png" alt="">
+                </a> 
+                <!--Search on Desktop-->
+                <form  class="hidden outline-none  mb-3 lg:flex lg:items-center  rounded-md py-2 mt-3 searchDesktopHeader">
+                    <input  placeholder="Search books here "  class="md:py-2   placeholder:text-sm  w-full lg:w-[25rem] xl:w-[30rem]  rounded-l-md px-2 outline-none  text-sm bg-blue-50 searchHeaderInput" type="text" name="" >
+                    <button type="submit" class="bg-[#DAA520] w-fit px-2 py-[6px] rounded-r-md">
+                        <img class="h-5 md:h-6 object-contain lg:h-6" src="/images/search.png"     alt="">
+                    </button>
+                </form>
+            </div>
+            <div class="flex items-center  space-x-4 lg:space-x-12"><!--right-->
+               <a href="" class="flex items-center space-x-1 text-white ">
+                    <img class="h-4 md:h-6" src="/images/user white filled .png"  alt="">
+                    <p class="text-sm font-medium md:text-base">Sign in</p>
+               </a>
+               <a href="" class="lg:flex items-center lg:space-x-1">
+                    <img class="h-5 md:h-7" src="/images/shopping-cart white.png" alt="">
+                    <p class="font-medium textsm  md:text-base text-white hidden lg:block">Cart</p>
+               </a>
+               <button class=" items-center  hidden lg:block relative group" id="moreIconContainer">
+                    <div class="flex items-center peer" > <!--Drop down menu-->
+                        <p class="font-medium text-white text-lg ">More</p>
+                        <span id="moreIcon"  class="material-symbols-outlined text-white mt-[2px]">
+                            expand_more
+                        </span>
+                    </div>
+                    <div id="dropDownContents" class="dropdown_contents absolute z-10 top-[15px] right-[-100%] min-w-[190px]  group-hover:block  ">  <!--Dropdown contents-->
+                        <a href="" class="flex items-center space-x-5 px-2 py-2 border-b-[.2px] border-b-[#666666] hover:bg-gray-100 -z-10 invisible ">
+                            <img class="h-4" src="/images/user blue filled.png" alt="">
+                            <p class="text-sm text-[#666666]">My Account</p>
+                        </a>
+                        <a href="/admin/banner" class="flex bg-white items-center space-x-5 px-2 py-3 border-b-[.2px] border-b-[#666666] hover:bg-gray-100 rounded-t-sm">
+                            <img class="h-4" src="/images/user blue filled.png" alt="">
+                            <p class="text-sm text-[#666666]">My Account</p>
+                        </a>
+                        <a href="/admin/banner" class="flex bg-white items-center space-x-5 px-2 py-3 border-b-[.2px] border-b-[#666666] hover:bg-gray-100 ">
+                            <img class="h-4" src="/images/shopping-cart blue.png" alt="">
+                            <p class="text-sm text-[#666666]">My Cart</p>
+                        </a>
+                        <a href="/admin/banner" class="flex bg-white items-center space-x-5 px-2 py-3 border-b-[.2px] border-b-[#666666] hover:bg-gray-100 ">
+                            <img class="h-4" src="/images/heart fill blue.png" alt="">
+                            <p class="text-sm text-[#666666]">Wish List</p>
+                        </a>
+                        <a href="/admin/banner" class="flex bg-white items-center space-x-5 px-2 py-3 border-b-[.2px] border-b-[#666666] hover:bg-gray-100 ">
+                            <img class="h-4" src="/images/location blue filled.png" alt="">
+                            <p class="text-sm text-[#666666]">My Orders</p>
+                        </a>
+                        <a href="/admin/banner" class="flex bg-white items-center space-x-5 px-2 py-3 border-b-[.2px] border-b-[#666666] hover:bg-gray-100 ">
+                            <img class="h-4" src="/images/open-book blue.png" alt="">
+                            <p class="text-sm text-[#666666]">About Us</p>
+                        </a>
+                        <a href="/admin/banner" class="flex bg-white items-center space-x-5 px-2 py-3 border-b-[.2px] border-b-[#666666] hover:bg-gray-100 rounded-b-md ">
+                            <img class="h-4" src="/images/phone blue filled.png" alt="">
+                            <p class="text-sm text-[#666666]">Contact Us</p>
+                        </a>
+                    </div>
+               </button>
+            </div>
+        </div>
+        <form class="lg:hidden searchDesktopHeader"> <!--Search-->
+            <div class="flex px-7 sm:px-16 rounded-md py-2 mt-3">
+                <input placeholder="Search books here "  class="md:py-2 searchHeaderInput placeholder:text-xs  w-full rounded-l-md px-2 outline-none text-sm" type="text" name="" id="">
+                <button type="submit" class="bg-[#DAA520] flex items-center w-fit px-2 py-1 rounded-r-md">
+                    <img class="h-5 object-contain" src="/images/search.png" alt="">
+                </button>
+            </div>
+        </form>
+    </header>
+    <!--search Containe-->
+    <div class="searchResult-Container">
+
     </div>
-    <main id="homeMain" class="px-2 py-3 ">
+
+    <main class="px-2 py-3">
         <div id="TopCategorycontainer" class=" flex space-x-2 md:space-x-4   overflow-auto relative"> <!--Top category sldier -->
             <%categories.slice(0, 7).forEach(function(data){%>
                 <a href="/user/products/<%= encodeURIComponent(data.categoryName)%>" class="bg-gray-200  border-b-[#333333] border-[.1px] hover:drop-shadow-md hover:border lg:min-w-[150px]  min-w-[92px] md:min-w-[102px] rounded-md drop-shadow-sm ">
@@ -114,6 +190,9 @@
         </a>
        
     </main>
+         
+    <div class="flex-grow">
+    </div>
     <%-include("../partials/user/userFooter.ejs")%>
         <div  id="SidebarContainerr" class="h-full w-full absolute inset-0 bg-[rgba(0,0,0,0.6)] invisible   transition-all duration-75">
             <div id="Sidebar" class="-translate-x-[250px] w-[250px] h-full  overflow-hidden fixed top-0 left-0 transition-all duration-300 ease-in "><!--Side bar Mobile-->
@@ -158,8 +237,8 @@
            </div>
            </div>
         </div>
-        
-
+   
     
 </body>
 <script src="/javascripts/user/home.js" ></script>
+<script src="../../../javascripts/admin/adminHeader.js"></script>
