--- a/views/user/products.ejs
+++ b/views/user/products.ejs
@@ -5,91 +5,15 @@
 <%-include('../partials/user/HeaderDesktopUser.ejs')%>
 <body class="bg-[#F2F2F2] flex flex-col h-screen">
 
-  
-    
-    <div class="lg:flex lg:justify-around ">
-        <div class=" lg:mt-12"><!--Filtering-->
-            <div class=" hidden lg:flex px-5 py-2 bg-[#55808a] rounded-t-md   <%  if(products.length===0){ %>lg:hidden<% } %>">
-                <h1 class="text-white font-semibold rounedtmd"><%=products[0]?.category %></h1>
-            </div>
-            <form class="drop-shadow-sm rounded-md pb-8 mb-8 space-y-10 pr-28 pl-4 bg-white hidden lg:block <%  if(products.length===0){ %>lg:hidden<% } %>">
-                <div class=" mb-2 pt-2"><!--Condition-->
-                    <div class="text-sm font-medium py-2">
-                        CONDITION
-                    </div>
-                    <div class="flex flex-col text-sm space-y-4">
-                        <div class="select-none cursor-pointer space-x-2 flex items-center">
-                            <input class="cursor-pointer" type="checkbox" id="likenew" name="likenew" value="new">
-                            <label class="cursor-pointer text-xs" for="likenew">Like New</label>
-                        </div>
-                        <div class="select-none cursor-pointer space-x-2 flex items-center">
-                            <input class="cursor-pointer" type="checkbox" id="old" name="old" value="old">
-                            <label class="cursor-pointer text-xs" for="old">Old</label>
-                        </div>
-                        <div class="select-none cursor-pointer space-x-2 flex items-center">
-                            <input class="cursor-pointer" type="checkbox" id="readable" name="readable" value="readable">
-                            <label class="cursor-pointer text-xs" for="readable">Readable</label>
-                        </div>
-                    </div>
-                </div>
-                <div class=" mb-2"><!--Price-->
-                    <div class="text-sm font-medium py-2">
-                        PRICE
-                    </div>
-                    <div class="flex flex-col text-sm space-y-4">
-                        <div class="select-none cursor-pointer space-x-2 flex items-center">
-                            <input class="cursor-pointer" type="checkbox" id="50-100" name="50-100" value="50-100">
-                            <label class="cursor-pointer text-xs" for="50-100">Rs.50 to Rs.100</label>
-                        </div>
-                        <div class="select-none cursor-pointer space-x-2 flex items-center">
-                            <input class="cursor-pointer" type="checkbox" id="100-200" name="100-200" value="100-200">
-                            <label class="cursor-pointer text-xs" for="100-200">Rs.100 to Rs.200</label>
-                        </div>
-                        <div class="select-none cursor-pointer space-x-2 flex items-center">
-                            <input class="cursor-pointer" type="checkbox" id="200-300" name="200-300" value="200-300">
-                            <label class="cursor-pointer text-xs" for="200-300">Rs.200 to Rs.300</label>
-                        </div>
-                        <div class="select-none cursor-pointer space-x-2 flex items-center">
-                            <input class="cursor-pointer" type="checkbox" id="300-400" name="300-400" value="300-400">
-                            <label class="cursor-pointer text-xs" for="300-400">Rs.300 to Rs.400</label>
-                        </div>
-                        <div class="select-none cursor-pointer space-x-2 flex items-center">
-                            <input class="cursor-pointer" type="checkbox" id="400-500" name="400-500" value="400-500">
-                            <label class="cursor-pointer text-xs" for="400-500">Rs.400 to Rs.500</label>
-                        </div>
-                        <div class="select-none cursor-pointer space-x-2 flex items-center">
-                            <input class="cursor-pointer" type="checkbox" id="above 500" name="above 500" value="above 500">
-                            <label class="cursor-pointer text-xs" for="above 500">Above 500</label>
-                        </div>
-                    </div>
-                </div>
-                <div class=" mb-2"><!--Discount-->
-                    <div class="text-sm font-medium py-2">
-                        DISCOUNT
-                    </div>
-                    <div class="flex flex-col text-sm space-y-4">
-                        <div class="select-none cursor-pointer space-x-2 flex items-center">
-                            <input class="cursor-pointer" type="checkbox" id="10%" name="10" value="10">
-                            <label class="cursor-pointer text-xs" for="10%">10% and above</label>
-                        </div>
-                        <div class="select-none cursor-pointer space-x-2 flex items-center">
-                            <input class="cursor-pointer" type="checkbox" id="30%" name="30%" value="30%">
-                            <label class="cursor-pointer text-xs" for="30%">30% and above</label>
-                        </div>
-                        <div class="select-none cursor-pointer space-x-2 flex items-center">
-                            <input class="cursor-pointer" type="checkbox" id="50%" name="50%" value="50%">
-                            <label class="cursor-pointer text-xs" for="50%">50% and above</label>
-                        </div>
-                        <div class="select-none cursor-pointer space-x-2 flex items-center">
-                            <input class="cursor-pointer" type="checkbox" id="80%" name="80%" value="80%">
-                            <label class="cursor-pointer text-xs" for="80%">80% and above</label>
-                        </div>
-                    </div>
-                </div>
-                
-            </form>
-        </div>
-        <div> <!--Novel conatiner-->
+    <div class="searchResult-Container">
+    </div>
+    <main class="lg:flex  lg:space-x-6 lg:ml-5  ">
+        <!--Filter-->
+        <%-include('../partials/user/filterPartial.ejs')%>
+
+        <div id="searchResult-Container">
+        </div>    
+        <main class="mb-5"> <!--Novel conatiner-->
             <div class="grid-cols-2 md:grid-cols-5 lg:grid-cols-4 xl:grid-cols-5 lg:gap-x-10 xl:gap-x-6 gap-x-3  sm:grid-cols-4 mt-3 w-full grid px-5 gap-y-4 lg:mt-12"> <!--Books group container-->
                 <!--item-->
                 <% if(products.length===0){%>
@@ -120,9 +44,10 @@
                 <% } %> 
                
             </div>
-        </div>
-    </div>
+        </main>
+    </main>
 
     <div class="flex-grow"></div>
     <%-include("../partials/user/userFooter.ejs")%>
 </body>
+<script src="../../javascripts/user/products.js"></script>
