--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -1,6 +1,13 @@
 <%-include("../partials/user/head.ejs")%>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 <link rel="stylesheet" href="/css/user/header.css">
+<style>
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none;
+    appearance: none; 
+}
+</style>
 <body class="bg-[#F2F2F2]  flex flex-col h-screen">
     <header class="bg-[#5E8E99]  flex items-center justify-center px-3 py-2 lg:hidden">
         <img class="h-8" src="/images/Logo.png" alt="">
@@ -18,17 +25,18 @@
                         <p class="font-semibold text-lg">Turn the page to membership</p>
                         <p class="text-[#666666] text-xs pl-2 -mt-1 font-medium"> Uncover Hidden Tales in Every Book !!</p>
                     </div>
-                    <form action="" class="w-full mt-7">
-                        <input class="w-full rounded-md lg:bg-white bg-[#F2F2F2] border-[.2px] outline-none border-[#666666] px-2 py-[6px] placeholder:text-xs text-sm " placeholder="Phone number here" type="text" name="" id="">
+                    <form id="loginFirstForm" method="post" action="" class="w-full mt-7">
+                        <input type="number" class="w-full rounded-md lg:bg-white bg-[#F2F2F2] border-[.2px] outline-none border-[#666666] px-2 py-[6px] placeholder:text-xs text-sm " placeholder="Phone number here" name="customerPhone" id="loginPhoneInput">
+                        <p class="text-xs text-red-700  m-1 mx-2 hidden " id="loginError"> phone number can't be empty</p>
                         <button type="submit" class="hidden" id="loginPhoneSubmit"></button>
                     </form>
                     <p class="text-[10px] text-[#666666] mt-6 ml-2">By continuing, you agree to Binbook's <span class="text-blue-600">Terms of Use </span>and <span class="text-blue-600">Privacy Policy.</span> 
                     </p>
                 </div>
                 <div class="hidden lg:block">
-                    <button class="bg-[#DAA520] text-white w-full py-2 font-medium  mt-10 rounded-md" >
+                    <label for="loginPhoneSubmit"  class="bg-[#DAA520] cursor-pointer hover:bg-[#c4951d] flex justify-center items-center text-white w-full py-2 font-medium  mt-10 rounded-md" >
                         Continue
-                    </button>
+                    </label>
                 </div>
                
             </div>
@@ -37,11 +45,11 @@
     <div class="lg:hidden flex-grow">
     </div>
     <div class="px-2 py-2 border-t-[.1px] border-t-[#666666] lg:hidden">
-        <label for="loginPhoneSubmit" class="w-full  " >
-            <button class="w-full py-1 text-white rounded-md font-semibold bg-[#C0C0C0]">
+        <div  class="w-full  " >
+            <label for="loginPhoneSubmit" class="flex justify-center items-center w-full py-1 text-white rounded-md font-semibold bg-[#C0C0C0]">
                 Continue
-            </button>
-        </label>
+            </label>
+        </div>
     </div>
     
     <div class="hidden lg:block">
@@ -49,5 +57,5 @@
     </div>
    
 </body>
-<script src="/javascripts/user/myAccount.js"></script>
+<script src="/javascripts/user/login.js"></script>
 </html>
