login and creat account done

--- a/views/admin/adminProducts.ejs
+++ b/views/admin/adminProducts.ejs
@@ -1,5 +1,12 @@
 
 <%-include("../partials/admin/head.ejs")%>
+<style>
+    input[type=number]::-webkit-inner-spin-button, 
+    input[type=number]::-webkit-outer-spin-button { 
+        -webkit-appearance: none;
+        appearance: none; 
+    }
+    </style>
 <body class="bg-[#F2F2F2]">
     <%-include("../partials/admin/header.ejs")%>
     <main class="px-10 flex">
