--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -46,7 +46,7 @@ input[type=number]::-webkit-outer-spin-button {
     </div>
     <div class="px-2 py-2 border-t-[.1px] border-t-[#666666] lg:hidden">
         <div  class="w-full  " >
-            <label for="loginPhoneSubmit" class="flex justify-center items-center w-full py-1 text-white rounded-md font-semibold bg-[#C0C0C0]">
+            <label for="loginPhoneSubmit" class="flex justify-center items-center w-full py-1 text-white rounded-md font-semibold bg-[#565656]">
                 Continue
             </label>
         </div>
