--- a/views/partials/user/HeaderDesktopUser.ejs
+++ b/views/partials/user/HeaderDesktopUser.ejs
@@ -16,11 +16,16 @@
             </form>
         </div>
         <div class="flex items-center  space-x-4 lg:space-x-12"><!--right-->
-           <a href="" class="flex items-center space-x-1 text-white ">
+           <div href="" class="flex items-center space-x-1 text-white ">
                 <img class="h-4 md:h-6" src="/images/user white filled .png"  alt="">
-                <p class="text-sm font-medium md:text-base">Sign in</p>
-           </a>
-           <a href="" class="lg:flex items-center lg:space-x-1">
+                <% if(locals.user) {%>
+                    <% const firstName = user.split(' ')[0]; %>
+                    <p class="text-sm font-medium md:text-base capitalize"><%= firstName %></p>
+                <%  }else{%>
+                    <a href="/user/login" class="text-sm font-medium md:text-base">Sign in</a>
+                <% } %>
+           </div>
+           <a href="/user/myCart" class="lg:flex items-center lg:space-x-1">
                 <img class="h-5 md:h-7" src="/images/shopping-cart white.png" alt="">
                 <p class="font-medium textsm  md:text-base text-white hidden lg:block">Cart</p>
            </a>
@@ -36,11 +41,11 @@
                         <img class="h-4" src="/images/user blue filled.png" alt="">
                         <p class="text-sm text-[#666666]">My Account</p>
                     </a>
-                    <a href="/admin/banner" class="flex bg-white items-center space-x-5 px-2 py-3 border-b-[.2px] border-b-[#666666] hover:bg-gray-100 rounded-t-sm">
+                    <a href="/user/myaccount" class="flex bg-white items-center space-x-5 px-2 py-3 border-b-[.2px] border-b-[#666666] hover:bg-gray-100 rounded-t-sm">
                         <img class="h-4" src="/images/user blue filled.png" alt="">
                         <p class="text-sm text-[#666666]">My Account</p>
                     </a>
-                    <a href="/admin/banner" class="flex bg-white items-center space-x-5 px-2 py-3 border-b-[.2px] border-b-[#666666] hover:bg-gray-100 ">
+                    <a href="/user/myCart" class="flex bg-white items-center space-x-5 px-2 py-3 border-b-[.2px] border-b-[#666666] hover:bg-gray-100 ">
                         <img class="h-4" src="/images/shopping-cart blue.png" alt="">
                         <p class="text-sm text-[#666666]">My Cart</p>
                     </a>
