--- a/views/partials/user/headerPhone.ejs
+++ b/views/partials/user/headerPhone.ejs
@@ -13,13 +13,18 @@
         <button id="Search-button">
             <img class="h-5" src="/images/search white.png" alt="">
         </button>
+        <a href="/user/myCart"> <img class="h-5" src="/images/shopping-cart white.png" alt=""></a>
+        <% if(locals.user) {%>
+            <a href="/user/myaccount"><img class="h-5" src="/images/user white filled .png" alt=""></a>
+        <%  }else{%>
+            <a href="/user/login"><img class="h-5" src="/images/user white filled .png" alt=""></a>
+            
+        <% } %>
         
-        <img class="h-5" src="/images/shopping-cart white.png" alt="">
-        <img class="h-5" src="/images/user white filled .png" alt="">
     </div>
    
 </header>
-<form  class="py-[3px] w-full hidden flex justify-between items-center bg-white border-b-[.1px] border-b-[#666666] px-3 "id="searchUserHeader">
+<form  class="py-[3px] w-full hidden lg:hidden flex justify-between items-center bg-white border-b-[.1px] border-b-[#666666] px-3 "id="searchUserHeader">
     <span id="searchHidden" onclick="" class="space-x-2 material-symbols-outlined text-[#333333] text-2xl font-medium %>">
         arrow_back
     </span>
