--- a/views/partials/user/searchResultInnerData.ejs
+++ b/views/partials/user/searchResultInnerData.ejs
@@ -1,5 +1,5 @@
 <div class="mb-3"> <!--Novel conatiner-->
-    <div class="grid-cols-2 md:grid-cols-5 lg:grid-cols-5 xl:grid-cols-5 px-16 lg:gap-x-10 xl:gap-x-6 xl:gap-y-5 gap-x-3  sm:grid-cols-4 mt-3 w-full grid  gap-y-6 lg:mt-12"> <!--Books group container-->
+    <div class="grid-cols-2 md:grid-cols-5 lg:grid-cols-5 xl:grid-cols-6 px-6 lg:px-16 lg:gap-x-10 xl:gap-x-6 xl:gap-y-5 gap-x-3  sm:grid-cols-4 mt-3 w-full grid  gap-y-6 lg:mt-12"> <!--Books group container-->
         <!--item-->
         <% if(searchResults.length===0){%>
             <div class="my-auto mx-auto absolute inset-0 flex items-center justify-center mb-52 md:mb-0 ">
