--- a/views/user/createAccount.ejs
+++ b/views/user/createAccount.ejs
@@ -2,6 +2,13 @@
 <%-include("../partials/user/head.ejs")%>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 <link rel="stylesheet" href="/css/user/header.css">
+<style>
+    input[type=number]::-webkit-inner-spin-button, 
+    input[type=number]::-webkit-outer-spin-button { 
+        -webkit-appearance: none;
+        appearance: none; 
+    }
+    </style>
 <body class="bg-[#F2F2F2]  flex flex-col h-screen">
     <header class="bg-[#5E8E99]  flex items-center justify-center px-3 py-2 lg:hidden">
         <img class="h-8" src="/images/Logo.png" alt="">
@@ -19,32 +26,45 @@
                         <p class="font-semibold text-lg">You look like new here ...</p>
                         <p class="text-[#666666] text-xs pl-2 -mt-1 font-medium">  Create an account with us !! </p>
                     </div>
-                    <form action="" class="w-full mt-7">
-                        <input class="w-full rounded-md lg:bg-white bg-[#F2F2F2] border-[.2px] outline-none border-[#666666] px-2 py-[6px] placeholder:text-xs text-sm " placeholder="Full name" type="text" name="" id="">
-                        <input class="w-full mt-5 rounded-md lg:bg-white bg-[#F2F2F2] border-[.2px] outline-none border-[#666666] px-2 py-[6px] placeholder:text-xs text-sm " placeholder="Phone" type="number" name="" id="">
-                        <input class="w-full mt-5 rounded-md lg:bg-white bg-[#F2F2F2] border-[.2px] outline-none border-[#666666] px-2 py-[6px] placeholder:text-xs text-sm " placeholder="email" type="email" name="" id="">
+                    <form action="/user/createAccount" method="post" class="w-full mt-7" id="createAccountForm">
+                        <input class="w-full rounded-md lg:bg-white bg-[#F2F2F2] border-[.2px] outline-none border-[#666666] px-2 py-[6px] placeholder:text-xs text-sm " placeholder="Full name" type="text" name="name" id="CAname">
+                        <input class="w-full mt-5 rounded-md lg:bg-white bg-[#F2F2F2] border-[.2px] outline-none border-[#666666] px-2 py-[6px] placeholder:text-xs text-sm " placeholder="email" type="text" name="email" id="CAemail">
                         <div class="flex mt-5 space-x-5 text-xs text-[#333333] lg:text-sm">
                             <p>Gender</p>
                             <div class="flex items-center space-x-2">
-                                <input type="radio" name="gender" id="male">
+                                <input type="radio" name="gender" id="male" value="male" checked>
                                 <label for="male">Male</label>
                             </div>
                             <div class="flex items-center space-x-2">
-                                <input type="radio" name="gender" id="female">
+                                <input type="radio" name="gender" id="female" value="female">
                                 <label for="female">Female</label>
                             </div>
                         </div>
-                        <input class="w-full mt-5 rounded-md lg:bg-white bg-[#F2F2F2] border-[.2px] outline-none border-[#666666] px-2 py-[6px] placeholder:text-xs text-sm " placeholder="Password" type="text" name="" id="">
-                        <input class="w-full mt-5 rounded-md lg:bg-white bg-[#F2F2F2] border-[.2px] outline-none border-[#666666] px-2 py-[6px] placeholder:text-xs text-sm " placeholder="Confirm password" type="text" name="" id="">
+                            <div class="w-full mt-5 rounded-md lg:bg-white bg-inherit border-[.2px]  border-[#666666] flex justify-between items-center pl-1 pr-2 ">
+                                <input class=" outline-none bg-inherit px-2 py-[6px] placeholder:text-xs text-sm w-full" placeholder="Password" type="password" name="" id="CApassword">
+                                <span id="VisibilityPassword" class="material-symbols-outlined cursor-pointer text-lg select-none"onclick="togglePasswordVisibility()">
+                                    visibility_off
+                                    </span>
+                            </div>
+                            <div class="w-full mt-5 bg-inherit rounded-md lg:bg-white bg-[#F2F2F2] border-[.2px] border-[#666666] flex justify-between items-center pl-1 pr-2">
+                                <input class="w-full outline-none bg-inherit  px-2 py-[6px] placeholder:text-xs text-sm " placeholder="Confirm password" type="password" name="password" id="CAconfirmPassword">
+                                <span id="VisibilityConfirmPassword" class="material-symbols-outlined cursor-pointer text-lg select-none"onclick="togglePasswordVisibilityConfirm()">
+                                    visibility_off
+                                    </span>
+                            </div>
+                        
                         <button type="submit" class="hidden" id="loginPhoneSubmit"></button>
-                    </form>
+                        
+                    </form> 
                     <!-- <a class="text-xs text-[#66666] mt-4 ml-2 cursor-pointer font-medium">We've sent an otp to ******2602
                     </a> -->
                 </div>
-                <div class="hidden lg:block">
-                    <button class="bg-[#DAA520] text-white w-full py-2 font-medium  mt-10 rounded-md" >
+                
+                <div class="hidden lg:block mt-10">
+                    <p class="text-xs text-red-700  flex justify-center items-center hidden    createAccountError">invalid phone number</p>
+                    <label for="loginPhoneSubmit" class="bg-[#DAA520] cursor-pointer hover:bg-[#c4951d] flex items-center justify-center text-white w-full py-2 font-medium mt-2  rounded-md" >
                         Create Account
-                    </button>
+                    </label>
                 </div>
                
             </div>
@@ -52,12 +72,16 @@
     </main>
     <div class="lg:hidden flex-grow">
     </div>
+    <div class="lg:hidden">
+        <p class="text-xs text-red-700  flex justify-center items-center   my-2 lg:hidden hidden createAccountError">invalid phone number</p>
+    </div>
     <div class="px-2 py-2  border-t-[.1px] border-t-[#666666] lg:hidden">
-        <label for="loginPhoneSubmit" class="w-full  " >
-            <button class="w-full py-1 text-white rounded-md font-semibold bg-[#C0C0C0]">
+        
+        <div for="loginPhoneSubmit" class="w-full  " >
+            <label for="loginPhoneSubmit" class="w-full py-1 flex justify-center items-center text-white rounded-md font-semibold bg-[#565656]">
                 Continue
-            </button>
-        </label>
+            </label>
+        </div>
     </div>
     
     <div class="hidden lg:block">
@@ -65,5 +89,5 @@
     </div>
    
 </body>
-<script src="/javascripts/user/myAccount.js"></script>
+<script src="/javascripts/user/createAccount.js"></script>
 </html>
