--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -20,11 +20,16 @@
                 </form>
             </div>
             <div class="flex items-center  space-x-4 lg:space-x-12"><!--right-->
-               <a href="" class="flex items-center space-x-1 text-white ">
+               <div href="" class="flex items-center space-x-1 text-white ">
                     <img class="h-4 md:h-6" src="/images/user white filled .png"  alt="">
-                    <p class="text-sm font-medium md:text-base">Sign in</p>
-               </a>
-               <a href="" class="lg:flex items-center lg:space-x-1">
+                    <% if(user) {%>
+                        <% const firstName = user.split(' ')[0]; %>
+                        <p class="text-sm font-medium md:text-base capitalize"><%= firstName %></p>
+                    <%  }else{%>
+                        <a href="/user/login" class="text-sm font-medium md:text-base">Sign in</a>
+                    <% } %>
+                </div>
+               <a href="/user/myCart" class="lg:flex items-center lg:space-x-1">
                     <img class="h-5 md:h-7" src="/images/shopping-cart white.png" alt="">
                     <p class="font-medium textsm  md:text-base text-white hidden lg:block">Cart</p>
                </a>
@@ -40,11 +45,11 @@
                             <img class="h-4" src="/images/user blue filled.png" alt="">
                             <p class="text-sm text-[#666666]">My Account</p>
                         </a>
-                        <a href="/admin/banner" class="flex bg-white items-center space-x-5 px-2 py-3 border-b-[.2px] border-b-[#666666] hover:bg-gray-100 rounded-t-sm">
+                        <a href="/user/myaccount" class="flex bg-white items-center space-x-5 px-2 py-3 border-b-[.2px] border-b-[#666666] hover:bg-gray-100 rounded-t-sm">
                             <img class="h-4" src="/images/user blue filled.png" alt="">
                             <p class="text-sm text-[#666666]">My Account</p>
                         </a>
-                        <a href="/admin/banner" class="flex bg-white items-center space-x-5 px-2 py-3 border-b-[.2px] border-b-[#666666] hover:bg-gray-100 ">
+                        <a href="/user/myCart" class="flex bg-white items-center space-x-5 px-2 py-3 border-b-[.2px] border-b-[#666666] hover:bg-gray-100 ">
                             <img class="h-4" src="/images/shopping-cart blue.png" alt="">
                             <p class="text-sm text-[#666666]">My Cart</p>
                         </a>
@@ -198,10 +203,16 @@
             <div id="Sidebar" class="-translate-x-[250px] w-[250px] h-full  overflow-hidden fixed top-0 left-0 transition-all duration-300 ease-in "><!--Side bar Mobile-->
                 <div class="bg-[#5E8E99] min-h-[100px] max-h-[100px] py-5 flex justify-between items-center ">
                     <div class="space-y-2 whitespace-nowrap ">
-                        <a href="" class="px-3 flex items-center space-x-1 text-white">
+                        <div href="" class="px-3 flex items-center space-x-1 text-white">
                             <img class="h-6" src="/images/user white filled .png" alt="">
-                            <p class="mt-1">Sign In</p>
-                                  </a>
+                            <% if(locals.user) {%>
+                                <% const firstName = user.split(' ')[0]; %>
+                                <p class="mt-1"><%=firstName %></p>
+                            <%  }else{%>
+                                <a href="/user/login" class="mt-1">Sign In</a>
+                            <% } %>
+                           
+                        </div>
                              <p class="px-3 text-white text-xs whitespace-nowrap">Open Books ,Open Doors.. </p>
                     </div>
                     <span onclick="hideSidebar()" class="material-symbols-outlined text-white pr-3">
@@ -210,7 +221,7 @@
                         
                </div>
                <div class="h-full  bg-white">
-               <a href="/admin/banner" class="whitespace-nowrap flex bg-white items-center space-x-5 px-2 py-3 border-b-[.2px] border-b-[#666666] hover:bg-gray-100 rounded-t-sm">
+               <a href="/user/myaccount" class="whitespace-nowrap flex bg-white items-center space-x-5 px-2 py-3 border-b-[.2px] border-b-[#666666] hover:bg-gray-100 rounded-t-sm">
                    <img class="h-4" src="/images/user blue filled.png" alt="">
                    <p class="text-sm text-[#666666]">My Account</p>
                </a>
