my cart add remove count updation done

--- a/views/user/aboutUs.ejs
+++ b/views/user/aboutUs.ejs
@@ -4,6 +4,8 @@
 <body class="bg-[#F2F2F2] flex flex-col h-screen">
     <%-include('../partials/user/headerPhone.ejs')%>
     <%-include('../partials/user/HeaderDesktopUser.ejs')%>
+    <div class="searchResult-Container">
+    </div>
     <main class="px-2 lg:px-96 lg:mt-10">
         <div class="bg-white  pl-4 rounded-md py-2 mt-3  text-base text-[#452F24] font-semibold ">
             <p>About us</p>
