--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -13,6 +13,8 @@ input[type=number]::-webkit-outer-spin-button {
         <img class="h-8" src="/images/Logo.png" alt="">
     </header>
     <%-include('../partials/user/HeaderDesktopUser.ejs')%>
+    <div class="searchResult-Container">
+    </div>
     <main class="px-5 lg:px-0 lg:mx-60 lg:my-10 lg:flex lg:justify-between   lg:items-center  lg:flex-grow ">
 
             <div class="hidden lg:block  lg:h-full  lg:w-9/12 bg-[url('/images/logintest.jpeg')] bg-cover bg-no-repeat bg bg-center">
