--- a/views/user/myAccount.ejs
+++ b/views/user/myAccount.ejs
@@ -4,6 +4,8 @@
 <body class="bg-[#F2F2F2] flex flex-col h-screen">
     <%-include('../partials/user/headerPhone.ejs')%>
     <%-include('../partials/user/HeaderDesktopUser.ejs')%>
+    <div class="searchResult-Container">
+    </div>
     <main class="px-3 lg:px-96 lg:mt-10">
        <div class="bg-white rounded-md px-3 py-6 mt-3  lg:h-60 "> <!--Profile-->
             <div class="flex justify-between">
