--- a/views/user/orderSummery.ejs
+++ b/views/user/orderSummery.ejs
@@ -5,6 +5,8 @@
 <body class="bg-[#F2F2F2] flex flex-col h-screen pb-2">
     <%-include('../partials/user/headerPhone.ejs')%>
     <%-include('../partials/user/HeaderDesktopUser.ejs')%>
+    <div class="searchResult-Container">
+    </div>
     <div class="mt-5 px-4 lg:px-32">
         <div class="">
             <div class="">
