--- a/views/user/yourOrders.ejs
+++ b/views/user/yourOrders.ejs
@@ -5,6 +5,8 @@
 <body class="bg-[#F2F2F2] flex flex-col h-screen pb-2">
     <%-include('../partials/user/headerPhone.ejs')%>
     <%-include('../partials/user/HeaderDesktopUser.ejs')%>
+    <div class="searchResult-Container">
+    </div>
     <main class="pb-16">
         <div class="px-4 mt-5 lg:px-52 space-y-3 lg:space-y-4">
             <div class="bg-white rounded-md px-5 py-3 space-y-3 drop-shadow-md" >
