--- a/views/partials/user/HeaderDesktopUser.ejs
+++ b/views/partials/user/HeaderDesktopUser.ejs
@@ -49,22 +49,27 @@
                         <img class="h-4" src="/images/shopping-cart blue.png" alt="">
                         <p class="text-sm text-[#666666]">My Cart</p>
                     </a>
-                    <a href="/admin/banner" class="flex bg-white items-center space-x-5 px-2 py-3 border-b-[.2px] border-b-[#666666] hover:bg-gray-100 ">
+                    <a href="/user/wishList" class="flex bg-white items-center space-x-5 px-2 py-3 border-b-[.2px] border-b-[#666666] hover:bg-gray-100 ">
                         <img class="h-4" src="/images/heart fill blue.png" alt="">
                         <p class="text-sm text-[#666666]">Wish List</p>
                     </a>
-                    <a href="/admin/banner" class="flex bg-white items-center space-x-5 px-2 py-3 border-b-[.2px] border-b-[#666666] hover:bg-gray-100 ">
+                    <a href="/user/yourOrders" class="flex bg-white items-center space-x-5 px-2 py-3 border-b-[.2px] border-b-[#666666] hover:bg-gray-100 ">
                         <img class="h-4" src="/images/location blue filled.png" alt="">
                         <p class="text-sm text-[#666666]">My Orders</p>
                     </a>
-                    <a href="/admin/banner" class="flex bg-white items-center space-x-5 px-2 py-3 border-b-[.2px] border-b-[#666666] hover:bg-gray-100 ">
+                    <a href="/user/aboutUs" class="flex bg-white items-center space-x-5 px-2 py-3 border-b-[.2px] border-b-[#666666] hover:bg-gray-100 ">
                         <img class="h-4" src="/images/open-book blue.png" alt="">
                         <p class="text-sm text-[#666666]">About Us</p>
                     </a>
-                    <a href="/admin/banner" class="flex bg-white items-center space-x-5 px-2 py-3 border-b-[.2px] border-b-[#666666] hover:bg-gray-100 rounded-b-md ">
+                    <a href="/user/home" class="flex bg-white items-center space-x-5 px-2 py-3 border-b-[.2px] border-b-[#666666] hover:bg-gray-100 rounded-b-md ">
                         <img class="h-4" src="/images/phone blue filled.png" alt="">
                         <p class="text-sm text-[#666666]">Contact Us</p>
                     </a>
+                    <a href="/user/logOut" class="flex bg-white items-center space-x-5 px-2 py-3 border-b-[.2px] border-b-[#666666] hover:bg-gray-100 rounded-b-md ">
+                        <img class="h-4" src="/images/logout (1) blue.png" alt="">
+                        <p class="text-sm text-[#666666]">Log Out</p>
+                    </a>
+                     
                 </div>
            </button>
         </div>
