--- a/views/user/wishList.ejs
+++ b/views/user/wishList.ejs
@@ -5,6 +5,8 @@
 <body class="bg-[#F2F2F2] flex flex-col h-screen pb-2">
     <%-include('../partials/user/headerPhone.ejs')%>
     <%-include('../partials/user/HeaderDesktopUser.ejs')%>
+    <div class="searchResult-Container">
+    </div>
     <main class="pb-16">
         <div class="px-4 mt-5 lg:px-52">
                 <div class="my-3 mt-5 space-y-3"><!--Continer-->
