my cart full done and admin side category remaining done

--- a/views/partials/user/HeaderDesktopUser.ejs
+++ b/views/partials/user/HeaderDesktopUser.ejs
@@ -4,7 +4,7 @@
                 <a id="menuButton" onclick="openNav();return false;" href="" class="flex items-center"><!--menu-->
                     <img class="h-[18px] md:h-6 lg:hidden" src="/images/menuWhite.png" alt="">
                 </a> 
-            <a href="" class="flex items-center"><!--Logo-->
+            <a href="/user/home" class="flex items-center"><!--Logo-->
                 <img class="h-7 md:h-8 lg:h-10" src="/images/Logo.png" alt="">
             </a> 
             <!--Search on Desktop-->
