--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -7,6 +7,9 @@ input[type=number]::-webkit-outer-spin-button {
     -webkit-appearance: none;
     appearance: none; 
 }
+input:-webkit-autofill {
+  box-shadow: 0 0 0 30px white inset; 
+}
 </style>
 <body class="bg-[#F2F2F2]  flex flex-col h-screen">
     <header class="bg-[#5E8E99]  flex items-center justify-center px-3 py-2 lg:hidden">
