--- a/views/user/loginpswd.ejs
+++ b/views/user/loginpswd.ejs
@@ -1,6 +1,11 @@
 <%-include("../partials/user/head.ejs")%>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 <link rel="stylesheet" href="/css/user/header.css">
+<style>
+input:-webkit-autofill {
+  box-shadow: 0 0 0 30px white inset; 
+}
+</style>
 <body class="bg-[#F2F2F2]  flex flex-col h-screen">
     <header class="bg-[#5E8E99]  flex items-center justify-center px-3 py-2 lg:hidden">
         <img class="h-8" src="/images/Logo.png" alt="">
@@ -22,7 +27,7 @@
                     </div>
                     <form action="/user/loginpswd" method="post" class="w-full mt-7" id="loginpswdForm">
                         <div class="w-full rounded-md flex justify-between items-center lg:bg-white bg-[#F2F2F2] border-[.2px] border-[#666666] px-2 py-[6px] ">
-                            <input class="outline-none w-full placeholder:text-xs text-sm bg-inherit bg-none  select-none" placeholder="Password here" type="text" name="password" id="password">
+                            <input class="outline-none w-full h-full bg-white placeholder:text-xs text-sm bg-inherit bg-none  select-none" placeholder="Password here" type="text" name="password" id="password">
                             <span id="visibilityIcon" class="material-symbols-outlined cursor-pointer text-lg select-none"onclick="togglePasswordVisibility()">
                                 visibility_off
                                 </span>
